--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 bcrypt==3.1.6
+beautifulsoup4==4.7.1
+bs4==0.0.1
 cffi==1.12.2
 Click==7.0
 Flask==1.0.2
@@ -8,14 +10,17 @@ Flask-Login==0.4.1
 flask-marshmallow==0.10.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.1
 marshmallow==2.19.1
 marshmallow-sqlalchemy==0.16.1
-peewee==3.9.3
+peewee==3.9.2
 pycparser==2.19
+python-dotenv==0.10.1
 six==1.12.0
+soupsieve==1.8
 SQLAlchemy==1.3.1
 Werkzeug==0.14.1
 WTForms==2.2.1
