--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask-Login==0.4.1
 flask-marshmallow==0.10.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+gunicorn==19.9.0
 ipython==7.3.0
 ipython-genutils==0.2.0
 isort==4.3.15
